--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "llama-ethena-deviation-tracker",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/main.ts",
   "scripts": {
-    "start": "tsx index.ts",
+    "start": "tsx src/main.ts",
+    "dev": "tsx src/main.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -18,5 +19,9 @@
     "node-telegram-bot-api": "^0.66.0",
     "tsx": "^4.20.3",
     "viem": "^2.33.2"
+  },
+  "overrides": {
+    "form-data": ">=2.5.4",
+    "tough-cookie": ">=4.1.3"
   }
 }
